--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/lodash": "^4.14.149",
+    "angular2-materialize": "^15.1.10",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "materialize-css": "^1.0.0",
+    "ngx-materialize": "^6.1.3",
     "rxjs": "~6.4.0",
+    "tether": "^1.4.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
